[package]
name = "pingora_vibe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pingora = { version = "0.1.0", features = ["proxy"] }
env_logger = "0.11.3"
structopt = "0.3.26"
zstd-sys = "1.6.1+zstd.1.5.0"
prometheus = "0.13.3"
pingora-core = "0.1.0"
async-trait = "0.1.77"
log = "0.4.21"
